testdata/e2e/complete-suite/apply-first/nginx.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config
  labels:
    app: nginx
    app.kubernetes.io/managed-by: mia-platform
    app.kubernetes.io/name: nginx
data:
  nginx.conf: |
    server {
      listen       8080;
      listen       [::]:8080;
      server_name  localhost;
      root /app;
      index index.html;
      client_max_body_size 1G;

      location / {
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        return 'Hello World!'
      }
    }
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    apparmor.security.beta.kubernetes.io/allowedProfileNames: runtime/default
    apparmor.security.beta.kubernetes.io/defaultProfileName: runtime/default
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/managed-by: mia-platform
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        apparmor.security.beta.kubernetes.io/allowedProfileNames: runtime/default
        apparmor.security.beta.kubernetes.io/defaultProfileName: runtime/default
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
        app.kubernetes.io/managed-by: mia-platform
    spec:
      serviceAccountName: service-account
      containers:
      - env:
        - name: NGINX_ENTRYPOINT_QUIET_LOGS
          value: "1"
        image: docker.io/library/nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: nginx.conf
        - mountPath: /tmp
          name: tmp-dir
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
      - name: image-pull
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: nginx-config
      - emptyDir:
          medium: Memory
        name: tmp-dir
...
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/managed-by: mia-platform
  name: nginx
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
...
